--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" th:href="@{/stylesheet.css}">
 </head>
 <body>
+
+<table th:value="${deliveries}">
+    <thead>
+        <tr>
+        <th>Address</th>
+            <th>Expected Delivery Time</th>
+            <th>Drone ID</th>
+            <th>Is Delivered</th>
+        </tr>
+    </thead>
+    <tbody id="table">
+        <tr th:each="delivery : ${deliveries}">
+            <td th:text="${delivery.address}"></td>
+            <td th:text="${delivery.expectedDeliveryTime}"></td>
+            <td th:text="${delivery.drone != null ? delivery.drone.id : 'No Drone Assigned'}"></td>
+            <td th:text="${delivery.delivered != true ? 'Not delivered' : 'Delivered'}"></td>
+            <td><button>hello</button></td>
+        </tr>
+
+    </tbody>
+</table>
+
+<script th:src="@{/javascript.js}"></script>
 
 </body>
 </html>
